fixed hover to be visible on calc button

--- a/src/main.css
+++ b/src/main.css
@@ -36,5 +36,6 @@ footer {
 }
 
 .calc-button:hover {
-  color: #FFC107;
+  color: #daae2c;
+  background-color: #000;
 }
